# Noita-BetterScreenShake

./: CMakeLists.txt
BetterScreenShake/: init.lua  mod.xml
